# etcd3aio

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRACT.md  CONTRIBUTING.md  EXAMPLES.md  GEMINI.md  LICENSE  MODULES.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  dicas.md  dicas.txt  notes.txt  pyproject.toml  pytest.txt  sonar-project.properties
.github/workflows/: ci.yml  publish.yml
docker/: client-cert.crt  client-key.key  compose.yaml  docker-compose.yaml  gen-certs.sh  peer-ca.crt  peer-ca.key  peer-cert.crt  peer-key.key  server-ca.crt  server-ca.key  server-cert.crt  server-key.key
examples/: auth_example.py  basic_kv.py  check_cluster.py  client_example.py  cluster_example.py  concurrency_example.py  connections_example.py  full_example.py  get_started_example.py  kv_example.py  lease_example.py  maintenance_example.py  tls_example.py  txn_example.py  watch_example.py
src/aioetcd3/: __init__.py  _protobuf.py  auth.py  base.py  check_cluster.py  client.py  concurrency.py  connections.py  errors.py  kv.py  lease.py  maintenance.py  watch.py
src/aioetcd3/proto/: auth.proto  kv.proto
src/aioetcd3/proto/etcd/api/authpb/: auth_pb2.py  auth_pb2_grpc.py
src/aioetcd3/proto/etcd/api/etcdserverpb/: rpc_pb2.py  rpc_pb2_grpc.py
src/aioetcd3/proto/etcd/api/mvccpb/: kv_pb2.py  kv_pb2_grpc.py
src/aioetcd3/proto/etcd/api/versionpb/: version_pb2.py  version_pb2_grpc.py
src/aioetcd3/proto/google/api/: annotations_pb2.py
src/aioetcd3/proto/protoc_gen_openapiv2/options/: annotations_pb2.py  openapiv2_pb2.py
src/etcd3aio/: __init__.py  _protobuf.py  auth.py  base.py  client.py  cluster.py  concurrency.py  connections.py  errors.py  kv.py  lease.py  maintenance.py  watch.py
src/etcd3aio/proto/etcd/api/authpb/: auth_pb2_grpc.py
src/etcd3aio/proto/etcd/api/etcdserverpb/: rpc_pb2.py  rpc_pb2_grpc.py
src/etcd3aio/proto/etcd/api/versionpb/: version_pb2_grpc.py
src/etcd3aio/proto/google/api/: http_pb2.py
temp_proto/etcd/api/etcdserverpb/: rpc.proto
temp_proto/etcd/api/versionpb/: version.proto
temp_proto/protoc-gen-openapiv2/options/: annotations.proto  openapiv2.proto
tests/: test_auth.py  test_client.py  test_concurrency.py  test_connections.py  test_kv.py  test_lease.py  test_maintenance.py  test_watch.py
tests/integration/: _helpers.py  conftest.py  test_cluster.py  test_concurrency.py  test_kv.py  test_lease.py  test_maintenance.py  test_watch.py
tests/integration/tls/: conftest.py  test_tls.py
tests/unit/: test_auth.py  test_client.py  test_cluster.py  test_connections.py  test_maintenance.py
