[project]
name = "etcd3aio"
version = "0.1.0"
description = "Async Python client for etcd v3 (grpc.aio, Python 3.11+)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "danielsabatini" }]
keywords = ["etcd", "etcd3", "asyncio", "grpc", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "grpcio>=1.67.0",
    "protobuf>=5.26.0",
]

[project.urls]
Homepage = "https://github.com/danielsabatini/etcd3aio"
Repository = "https://github.com/danielsabatini/etcd3aio"
Issues = "https://github.com/danielsabatini/etcd3aio/issues"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pyright",
    "grpcio-tools",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
etcd3aio = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = ["build", "dist", "__pycache__", "*.egg-info", ".venv", "src/etcd3aio/proto"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "PL", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["PLR2004"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src", "tests"]
extraPaths = ["src"]
exclude = ["build", "dist", "**/__pycache__", "**/*.egg-info", ".venv", "src/etcd3aio/proto"]
venvPath = "."
venv = ".venv"
reportMissingImports = "none"
reportMissingModuleSource = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=xml --cov-report=term --cov-report=html -v"
asyncio_mode = "strict"

[tool.coverage.run]
omit = [
    "src/etcd3aio/proto/*",
]
